# ais-spc-spark-book

./: README.md  TODO.md
app/: i_chart.py
assets/: add_assets_to_project.sh
plots/: Cargo.toml  start-server.sh
spc-utils/: Cargo.toml
spc-utils/src/: main.rs  mock_data.rs  polars_functions.rs
tests/: test_data_generation.py  (+1 more)
website/: .firebaserc  Cargo.toml  build.sh  firebase_build.sh  firebase_functions.json  index.html  index.scss
website/public/: index-9c0b1d1cbbf39ef5.css  index.html  website_bin-f6c69977e8f2da9c.js  website_bin-f6c69977e8f2da9c_bg.wasm
website/public/book/: 404.html  chapter_1.html  chapter_3.html  chapter_4.html  environment.html  print.html  searchindex.js  searchindex.json
website/public/book/appendix/: contributors.html  glossory.html
website/public/book/charts/: run_chart.html
website/public/book/presentations/: data_classification.html  hands_on.html  index.html  pair_data_to_charts.html
website/public/book/spc_control_charts/: additional_charts.html  charts.html  shewhart_charts.html
website/public/book/spc_control_charts/charts/: multivariate_control_charts.html
website/public/snippets/ais_website-2f9455dc26f79fe4/: firebase.js
website/src/: lib.rs  main.rs  router.rs
website/src/components/: app.rs  footer.rs  mod.rs  nav_bar.rs
website/src/firebase/: firebase.rs
website/src/models/: company.rs
website/src/pages/: about.rs  book.rs  contact.rs  home.rs  mod.rs
website/src/services/: company.rs  fetch_company.rs  mod.rs
website/src/static/company/: details.json
website/tests/: test_fecth_company.rs
(+37 files in other folders)
