[package]
name = "spc-book-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4.19"
csv = "1.1.6"
parquet = "8.0.0"
arrow = "8.0.0"
polars = { version = "0.15", features = ["parquet"] }
