[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
gloo = "0.11.0"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
log = "0.4.20"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
wasm-logger = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console",  "Window"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = { version = "0.18.0" }

chrono = { version = "0.4.33", features = ["serde"] }
chrono-tz = "0.8.5"
